docs/api/qiskit/0.25/qiskit.opflow.evolutions.EvolutionBase.mdx
---
title: EvolutionBase (v0.25)
description: API reference for qiskit.opflow.evolutions.EvolutionBase in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.evolutions.EvolutionBase
---

<span id="qiskit-opflow-evolutions-evolutionbase" />

# qiskit.opflow\.evolutions.EvolutionBase

<Class id="qiskit.opflow.evolutions.EvolutionBase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/evolutions/evolution_base.py" signature="EvolutionBase" modifiers="class">
  A base for Evolution converters. Evolutions are converters which traverse an Operator tree, replacing any `EvolvedOp` e with a Schrodinger equation-style evolution `CircuitOp` equalling or approximating the matrix exponential of -i \* the Operator contained inside (e.primitive). The Evolutions are essentially implementations of Hamiltonian Simulation algorithms, including various methods for Trotterization.

  ### \_\_init\_\_

  <Function id="qiskit.opflow.evolutions.EvolutionBase.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                         |                                                                                                   |
  | ----------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.opflow.evolutions.EvolutionBase.__init__ "qiskit.opflow.evolutions.EvolutionBase.__init__")()      | Initialize self.                                                                                  |
  | [`convert`](#qiskit.opflow.evolutions.EvolutionBase.convert "qiskit.opflow.evolutions.EvolutionBase.convert")(operator) | Traverse the operator, replacing any `EvolutionOps` with their equivalent evolution `CircuitOps`. |

  ### convert

  <Function id="qiskit.opflow.evolutions.EvolutionBase.convert" signature="convert(operator)" modifiers="abstract">
    Traverse the operator, replacing any `EvolutionOps` with their equivalent evolution `CircuitOps`.

    > **Args:**
    >
    > operator: The Operator to convert.

    **Return type**

    `OperatorBase`

    **Returns**

    The converted Operator, with `EvolutionOps` replaced by `CircuitOps`.
  </Function>
</Class>

