docs/api/qiskit/0.43/qiskit.opflow.evolutions.EvolutionBase.mdx
---
title: EvolutionBase (v0.43)
description: API reference for qiskit.opflow.evolutions.EvolutionBase in qiskit v0.43
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.evolutions.EvolutionBase
---

# EvolutionBase

<Class id="qiskit.opflow.evolutions.EvolutionBase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/evolutions/evolution_base.py" signature="EvolutionBase" modifiers="class">
  Bases: [`ConverterBase`](qiskit.opflow.converters.ConverterBase "qiskit.opflow.converters.converter_base.ConverterBase"), `ABC`

  Deprecated: A base for Evolution converters. Evolutions are converters which traverse an Operator tree, replacing any `EvolvedOp` e with a Schrodinger equation-style evolution `CircuitOp` equalling or approximating the matrix exponential of -i \* the Operator contained inside (e.primitive). The Evolutions are essentially implementations of Hamiltonian Simulation algorithms, including various methods for Trotterization.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.evolutions.evolution_base.EvolutionBase` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  ## Methods Defined Here

  <span id="qiskit-opflow-evolutions-evolutionbase-convert" />

  ### convert

  <Function id="qiskit.opflow.evolutions.EvolutionBase.convert" signature="EvolutionBase.convert(operator)" modifiers="abstract">
    Traverse the operator, replacing any `EvolutionOps` with their equivalent evolution `CircuitOps`.

    > #### Args:
    >
    > operator: The Operator to convert.

    **Returns**

    The converted Operator, with `EvolutionOps` replaced by `CircuitOps`.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>
</Class>

